--- a/external/config.json
+++ b/external/config.json
@@ -1,8 +1,8 @@
 {
-    "version": "metal-support-22",
+    "version": "metal-support-25",
     "zip_file_size": "146254799",
     "repo_name": "cocos2d-x-3rd-party-libs-bin",
-    "repo_parent": "https://github.com/cocos2d/",
+    "repo_parent": "https://github.com/NitroRT/",
     "move_dirs": {
         "fbx-conv": "tools"
     }
