--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ name: CI
 
 on:
   push:
-    branches: [ v4, v3 ]
+    branches: [ v4 ]
   pull_request:
-    branches: [ v4, v3 ]
+    branches: [ v4 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
