upgrage Console 2d path

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "tools/cocos2d-console"]
         path = tools/cocos2d-console
-        url = git://github.com/cocos2d/cocos2d-console.git
+        url = ../cocos2d-console.git
+	branch = v3
 [submodule "tools/bindings-generator"]
 	path = tools/bindings-generator
 	url = ../bindings-generator.git
