--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Win64
+name: Mac
 
 on:
   push:
@@ -12,13 +12,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  windows-2022:
-    name: Windows64
-    runs-on: windows-2022
+  macos-14:
+    name: MacOS
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v2
         with:
             submodules: recursive
       - run: python download-deps.py --r no
-      - run: cmake -B b -S . -G "Visual Studio 17 2022" -A x64
-      - run: cmake --build b
+      - run: cmake -B b -S . -GXcode
+      - run: cmake --build b 
