--- a/.github/workflows/iOS.yml
+++ b/.github/workflows/iOS.yml
@@ -20,6 +20,6 @@ jobs:
         with:
             submodules: recursive
       - run: python download-deps.py --r no
-      - run: cmake -B b -S . -GXcode -DCMAKE_SYSTEM_NAME=iOS -DCMAKE_OSX_SYSROOT=iphonesimulator
+      - run: cmake -B b -S . -GXcode -DCMAKE_SYSTEM_NAME=iOS -DCMAKE_OSX_SYSROOT=iphonesimulator -DCMAKE_OSX_ARCHITECTURES=arm64
       - run: cmake --build b --config Release --target cpp-tests -- -quiet -destination "platform=iOS Simulator,name=iPhone Retina (4-inch)"
 
