--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -4,9 +4,9 @@ name: Win64
 
 on:
   push:
-    branches: [ v4 ]
+    branches: [ master ]
   pull_request:
-    branches: [ v4 ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
