--- a/templates/cpp-template-default/proj.ios_mac/ios/Info.plist
+++ b/templates/cpp-template-default/proj.ios_mac/ios/Info.plist
@@ -36,6 +36,7 @@
     <true/>
     <key>UISupportedInterfaceOrientations</key>
     <array>
+        <string>UIInterfaceOrientationPortrait</string>
         <string>UIInterfaceOrientationLandscapeRight</string>
         <string>UIInterfaceOrientationLandscapeLeft</string>
     </array>
