--- a/templates/cpp-template-default/proj.android/app/build.gradle
+++ b/templates/cpp-template-default/proj.android/app/build.gradle
@@ -1,8 +1,25 @@
-import org.gradle.internal.os.OperatingSystem
+plugins {
+    id 'com.android.application'
+}
 
-apply plugin: 'com.android.application'
+configurations.all {
+    resolutionStrategy {
+        force "androidx.appcompat:appcompat:1.6.1"
+        force "androidx.appcompat:appcompat-resources:1.6.1"
+        force "androidx.core:core-ktx:1.10.1"
+        force "androidx.activity:activity:1.7.2"
+        force "androidx.transition:transition:1.4.1"
+        force "androidx.dynamicanimation:dynamicanimation:1.0.0"
+        force "androidx.annotation:annotation-experimental:1.3.1"
+        force "com.google.android.material:material:1.9.0"
+    }
+
+    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk7"
+    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk8"
+}
 
 android {
+    namespace "org.cocos2dx.hellocpp"
     compileSdkVersion PROP_COMPILE_SDK_VERSION.toInteger()
 
     defaultConfig {
@@ -12,9 +29,13 @@ android {
         versionCode 1
         versionName "1.0"
 
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
+
         externalNativeBuild {
             cmake {
-                targets 'MyGame'
+                targets 'HelloCpp'
                 arguments "-DCMAKE_FIND_ROOT_PATH=", "-DANDROID_STL=c++_static", "-DANDROID_TOOLCHAIN=clang", "-DANDROID_ARM_NEON=TRUE"
                 cppFlags "-frtti -fexceptions -fsigned-char"
             }
@@ -36,6 +57,7 @@ android {
     externalNativeBuild {
         cmake {
             path "../../CMakeLists.txt"
+            version "3.30.3"
         }
     }
 
@@ -70,6 +92,12 @@ android {
             renderscriptDebuggable true
         }
     }
+
+    buildFeatures {
+        prefab false
+    }
+
+    ndkVersion "25.1.8937393"
 }
 
 android.applicationVariants.all { variant ->
@@ -92,6 +120,20 @@ android.applicationVariants.all { variant ->
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':libcocos2dx')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(":libcocos2dx")
+
+    // Compatible with compileSdk 33 & AGP 8.0.2
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "androidx.appcompat:appcompat-resources:1.6.1"
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.activity:activity:1.7.2"
+    implementation "androidx.transition:transition:1.4.1"
+    implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
+    implementation "androidx.annotation:annotation-experimental:1.3.1"
+
+    // fix version to prevent to take newest ver 1.13.0
+    implementation "com.google.android.material:material:1.9.0"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.10"
 }
